k8s/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: fastapi-ns
  name: fastapi-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app:  fastapi-deployment
  template:
    metadata:
      labels: 
        app: fastapi-deployment
    spec:
       containers:
        - name: fastapi
          image: docker-fastapi:latest
          imagePullPolicy: Never  # or IfNotPresent
          ports:
            - containerPort: 8000
