k8s/Service.yaml
apiVersion: v1 
kind: Service
metadata:
  namespace: fastapi-ns  
  name: fastapi-svc
spec:
  selector:
    app: fastapi-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
